# FKP-ICLR

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: README.md
configs/datasets/: cifar100.yaml  domainnet.yaml  plantvillage.yaml
configs/experiments/: ablation_zca.yaml  main_table.yaml  quick-cifar-10.yaml
configs/teachers/: clip.yaml  resnet50.yaml  vit_b16.yaml
data/: README.md  download_datasets.sh
docker/: Dockerfile  README.md
edge_deployment/: CMakeLists.txt  README.md  export_to_c.py
edge_deployment/include/: fkp_inference.h
edge_deployment/src/: main.c
fkp/: README.md  __init__.py
fkp/compression/: __init__.py  pcls.py  ridge.py  svd.py
fkp/conditioning/: __init__.py  zca.py
fkp/models/: README.md  __init__.py  hooks.py
fkp/theory/: __init__.py  certificate.py
fkp/utils/: __init__.py  seeding.py
notebooks/: README.md  pcls_scatter.ipynb
scripts/: README.md  evaluate.py  generate_figures.py  run_calibration.py
src/fkp/: __init__.py
src/fkp/compression/: README.md
src/fkp/conditioning/: README.md  centering.py
src/fkp/models/: zoo.py
src/fkp/theory/: README.md  __init__.py  bounds.py
src/fkp/utils/: README.md  __init__.py  logging.py  metrics.py
tests/: README.md  test_certificate.py  test_ridge_dual.py  test_zca.py
