[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fkp"
version = "0.1.0"
description = "Feature Knowledge Projection: Label-Free, Certifiable Edge Deployment of Frozen Foundation Models"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Suyash Gaurav", email = "s23224522@al.tiu.ac.jp" },
]
keywords = ["edge-ai", "tinyml", "knowledge-distillation", "split-computing", "ridge-regression", "zero-shot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
models = [
    "timm>=0.9.0",
    "transformers>=4.35.0",
    "Pillow>=9.0",
]
data = [
    "torchvision>=0.16.0",
    "datasets>=2.14.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.5.0",
]
all = [
    "fkp[models,data,viz,dev]",
]

[project.scripts]
fkp-calibrate = "fkp.scripts.run_calibration:main"

[project.urls]
Homepage = "https://github.com/suyashgaurav/FKP-ICLR2027"
Paper = "https://arxiv.org/abs/XXXX.XXXXX"

# ── Tool configuration ─────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N803", "N806"]
exclude = ["src/fkp/generated/", "notebooks/"]

[tool.ruff.per-file-ignores]
"tests/*" = ["N802", "S101"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=fkp --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src/fkp"]
omit = ["*/tests/*", "*/notebooks/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
